[package]
authors = ["jorge aparicio <jorge@japaric.io>"]
edition = "2018"
name = "alloc-many-bump"
publish = false
version = "0.0.0-alpha.0"

[dependencies]
generic-array = "0.13.0"

[dev-dependencies]
alloc-many = { path = ".." }
alloc-many-collections = { path = "../collections" }
crossbeam-channel = "0.3.8"
threadpool = "1.7.1"